Fix layout issue when resizing

--- a/src/styles/designer.css
+++ b/src/styles/designer.css
@@ -590,6 +590,7 @@ body,
 
 .placeholder.designer-system > div > .panel-body {
     padding: 0px;
+    overflow: auto;
 }
 
 .placeholder.designer-system > div > .panel-body > .table {
